--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/payReview.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/payReview.vm
@@ -1,72 +1,5 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>幼富通</title>
-<meta name="keywords" content="幼富通">
-<meta name="description" content="幼富通">
-<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-<link rel="stylesheet" href="./public/css/style.css">
-<link rel="stylesheet" href="./public/css/family.css">
-<link rel="stylesheet" href="./public/css/jquery.mCustomScrollbar.css">
-    <style>
-    /*本页面的覆盖样式*/
-        .select-account-v2{
-            background-color: transparent;
-        }
-        .select-account-body .li3-v2{
-            float: left;
-            margin-left: 150px;
-            width:300px;
-            margin-top:5px;
-        }
-        .select-account-body .li3-v2 p{
-            margin:10px 0;
-        }
-        .select-account-body .paymoney{
-            font-size: 18px;
-            font-weight: bold;
-            margin-left:3px;
-        }
-        .li2 p .cost-type {
-            margin-right: 43px;
-            cursor: pointer;
-        }
-        .grades-item-title{
-            clear: both;
-            background-color: #f6f6f6;
-            width: 100%;
-            margin: 15px auto 4px auto;
-            height: 42px;
-            line-height: 42px;
-            color: #333;
-            box-shadow: 3px 3px 3px #d5d5d5;
-            position: relative;
-            margin-left: -2px;
-            cursor: pointer;
-        }
-        .grades-item-title .reduce{
-            position: absolute;
-            top: 1px;
-            right: 20px;
-            display: block;
-            color: #666;
-            font-size: 22px;
-        }
-        .grades-item-title label{
-            margin-left: 6px;
-            font-size: 16px;
-            padding-left: 2em;
-        }
-        .affirm-organiz{
-            margin-bottom: 0px;
-            border:1px solid #e6e6e5;
-        }
-        .affirm-organiz-form{
-            margin-bottom: 100px;
-        }
-    </style>
-</head>
 <body>
 <div id="page">
     <div id="header">
@@ -97,36 +30,42 @@
             <div class="a1" style="margin: 16px 0;height: 22px">
                 <h1 class="fl">确认缴费</h1>
                 <div class="fr f14">
-                    已选<span>3</span>条收费通知，总计： <span class="num-color">2800</span> 元
+                    已选<span>$plancountchecked</span>条收费通知，总计： <span class="num-color">$totalplanmonthamt</span> 元
                 </div>
             </div>
-             <div class="select-account select-account-v2">
-                 <div class="select-account-top">
-                     <h3 class="fl">选择付费账户</h3>
-                     <a href="../UFB/settingCard.html" class="fr f14 hoverLine">管理银行卡</a>
-                 </div>
-                 <div class="select-account-body">
-                     <ul>
-                         <li class="li1">使用</li>
-                         <li class="li2">
-                             <div class="costpay"><label class="cost-type"><input type="radio" name="paybank" checked="checked" style="display: none;"/><i class="imitate-radio check"></i>幼富宝（理财、缴费两不误）</label><span>42250元</span>
-                             <div class="payMoney showNow">支付<span class="num-color paymoney">2800元</span></div>
-                             </div>
-                             <div class="costpay"><label class="cost-type"><input type="radio" name="paybank" style="display: none;"/><i class="imitate-radio"></i>招商银行 尾号[5338]</label><span>储蓄卡</span><i class="middel-wire">|</i><span class="num-blue">快捷</span>
-                             <div class="payMoney">支付<span class="num-color paymoney">2800元</span></div>
-                             </div>
-                             <div class="costpay"><label class="cost-type"><input type="radio" name="paybank" style="display: none;"/><i class="imitate-radio"></i>工商银行 尾号[5338]</label><span>储蓄卡</span><i class="middel-wire">|</i><span class="num-blue">快捷</span>
-                             <div class="payMoney">支付<span class="num-color paymoney">2800元</span></div>
-                             </div>
-                         </li>
-                         <li class="li3 li3-v2">
-                             
+            <div class="select-account select-account-v2">
+                <div class="select-account-top">
+                    <h3 class="fl">选择付费账户</h3>
+                    <a href="../UFB/settingCard.html" class="fr f14 hoverLine">管理银行卡</a>
+                </div>
+                <div class="select-account-body">
+                    <ul>
+                        <li class="li1">使用</li>
+                        <li class="li2">
+                            <div class="costpay"><label class="cost-type"><input type="radio" name="paybank" checked="checked" style="display: none;"/><i class="imitate-radio check"></i>幼富宝（理财、缴费两不误）</label><span>42250元</span>
+                            <div class="payMoney showNow">支付<span class="num-color paymoney">$totalplanmonthamt元</span></div>
+                            </div>
+                            <div class="costpay"><label class="cost-type"><input type="radio" name="paybank" style="display: none;"/><i class="imitate-radio"></i>招商银行 尾号[5338]</label><span>储蓄卡</span><i class="middel-wire">|</i><span class="num-blue">快捷</span>
+                            <div class="payMoney">支付<span class="num-color paymoney">$totalplanmonthamt元</span></div>
+                            </div>
+                            <div class="costpay"><label class="cost-type"><input type="radio" name="paybank" style="display: none;"/><i class="imitate-radio"></i>工商银行 尾号[5338]</label><span>储蓄卡</span><i class="middel-wire">|</i><span class="num-blue">快捷</span>
+                            <div class="payMoney">支付<span class="num-color paymoney">$totalplanmonthamt元</span></div>
+                            </div>
+                        </li>
+                        <li class="li3 li3-v2">
                              <!--<p><span class="num-color">余额不足，</span>请预先充值</p>-->
-                         </li>
-                     </ul>
-                 </div>
-             </div>
-            <div class="affirm-organiz">
+                        </li>
+                    </ul>
+                </div>
+            </div>
+			<!--
+			model.addAttribute("orglist", orglist);
+			model.addAttribute("planlistlistchecked", planlistlistchecked);
+			model.addAttribute("plancountchecked", plancountchecked);
+			model.addAttribute("totalplanmonthamt", totalplanmonthamt);
+			-->
+			#foreach($planlistchecked in $planlistlistchecked)
+			<div class="affirm-organiz">
                 <div class="affirm-organiz-top">
                     <h3>确认收费机构</h3>
                 </div>
@@ -158,7 +97,7 @@
 
                        <div class="logoimg">
                            幼儿园LOGO图片
-                           <!--<img src="" alt=""/>-->
+                           <img src="" alt=""/>
                        </div>
                         <div class="affirm-content">
                             <div class="grades-item-title">
@@ -173,119 +112,20 @@
                                     <th width="18%">姓名</th>
                                     <th width="16%">应收金额(元)</th>
                                 </tr>
+								#foreach($planchecked in $planlistchecked)
                                 <tr>
-                                    <td>SV2015050501000100</td>
+                                    <td>$planchecked.planid</td>
                                     <td>2015年09月 代扣收费01</td>
                                     <td><span class="tip">单笔</span></td>
-                                    <td>张一宝</td>
-                                    <td class="num-color">1920</td>
+                                    <td>$planchecked.studentnm</td>
+                                    <td class="num-color">$planchecked.payappamount</td>
                                 </tr>
-                                <tr>
-                                    <td>SV2015050501000100</td>
-                                    <td>15年9月钢琴班</td>
-                                    <td><span class="tip">月代扣</span></td>
-                                    <td>张一宝</td>
-                                    <td class="num-color">1920</td>
-                                </tr>
-                                <tr>
-                                    <td>SV2015050501000100</td>
-                                    <td>10月奥数班报名费</td>
-                                    <td><span class="tip">单笔</span></td>
-                                    <td>张二宝</td>
-                                    <td class="num-color">1920</td>
-                                </tr>
-                                <tr>
-                                    <td>SV2015050501000100</td>
-                                    <td>10月奥数班报名费</td>
-                                    <td><span class="tip">月代扣</span></td>
-                                    <td>张二宝</td>
-                                    <td class="num-color">1920</td>
-                                </tr>
+								#end
                             </table>
                         </div>
                 </div>
-            </div><!--end of affirm-organiz-->
-
-            <div class="affirm-organiz">
-                <div class="affirm-organiz-top">
-                    <h3>确认收费机构</h3>
-                </div>
-                <div class="affirm-organiz-body">
-                    <div class="organiz-group">
-                        <label>收费机构名称</label>
-                        <p>海富幼儿园二园</p>
-                    </div>
-                    <div class="organiz-group">
-                        <label>营业执照号</label>
-                        <p>123456789</p>
-                    </div>
-                    <div class="organiz-group">
-                        <label>地址</label>
-                        <p>上海市浦东新区峨山路999弄11号</p>
-                    </div>
-                    <div class="organiz-group">
-                        <label>开户银行</label>
-                        <p>招商银行上海市分行世纪大道支行</p>
-                    </div>
-                    <div class="organiz-group">
-                        <label>银行账号</label>
-                        <p>2333344556678890</p>
-                    </div>
-                    <div class="organiz-group">
-                        <label>咨询电话</label>
-                        <p>021-32322323</p>
-                    </div>
-
-                    <div class="logoimg">
-                        幼儿园LOGO图片
-                        <!--<img src="" alt=""/>-->
-                    </div>
-                    <div class="affirm-content">
-                        <div class="grades-item-title">
-                            <label>缴费明细</label>
-                            <i class="reduce">+</i>
-                        </div>
-                        <table style="display: none;">
-                            <tr>
-                                <th width="20%">缴费交易号</th>
-                                <th width="30%">收费名称</th>
-                                <th width="18%">收费方式</th>
-                                <th width="18%">姓名</th>
-                                <th width="16%">应收金额(元)</th>
-                            </tr>
-                            <tr>
-                                <td>SV2015050501000100</td>
-                                <td>2015年09月 代扣收费01</td>
-                                <td><span class="tip">单笔</span></td>
-                                <td>张一宝</td>
-                                <td class="num-color">1920</td>
-                            </tr>
-                            <tr>
-                                <td>SV2015050501000100</td>
-                                <td>15年9月钢琴班</td>
-                                <td><span class="tip">月代扣</span></td>
-                                <td>张一宝</td>
-                                <td class="num-color">1920</td>
-                            </tr>
-                            <tr>
-                                <td>SV2015050501000100</td>
-                                <td>10月奥数班报名费</td>
-                                <td><span class="tip">单笔</span></td>
-                                <td>张二宝</td>
-                                <td class="num-color">1920</td>
-                            </tr>
-                            <tr>
-                                <td>SV2015050501000100</td>
-                                <td>10月奥数班报名费</td>
-                                <td><span class="tip">月代扣</span></td>
-                                <td>张二宝</td>
-                                <td class="num-color">1920</td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
-            </div><!--end of affirm-organiz-->
-
+            </div>
+			#end
             <div class="affirm-organiz-form">
                 <form action="">
                     <div class="control-group" style="margin-top: 2em;margin-bottom: 1em;">
@@ -311,7 +151,7 @@
 <div class="footer footer-simple">
     <div class="inner clearfix">
         <div class="logo fl">
-            <img src="images/logo_130x55.png">
+            <img src="${staticDomain}/static/familypay/images/logo_130x55.png">
         </div>
         <div class="info fl">
             <ul class="list">
@@ -396,9 +236,9 @@
 
 
 
-<script type="text/javascript" src="./public/js/jquery.js"></script>
-<script type="text/javascript" src="./libs/My97DatePicker/WdatePicker.js"></script>
-<script type="text/javascript" src="public/js/jquery.mCustomScrollbar.concat.min.js"></script> 
+<script type="text/javascript" src="${staticDomain}/static/public/js/jquery.js"></script>
+<script type="text/javascript" src="${staticDomain}/static/familypay/libs/My97DatePicker/WdatePicker.js"></script>
+<script type="text/javascript" src="${staticDomain}/static/public/js/jquery.mCustomScrollbar.concat.min.js"></script> 
 <script>!window.jQuery && document.write(unescape('%3Cscript src="js/minified/jquery-1.9.1.min.js"%3E%3C/script%3E'))</script>  <!--scroll美化-->
 <script type="text/javascript">
     $(function(){
