--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/payNotice.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/payNotice.vm
@@ -12,8 +12,8 @@
         <div class="container">
             <a href="#" class="logo"></a>
 			<div class="nav">
-				<a href="#">我的账户</a>
-				<a href="#" class="active">幼富宝</a>
+				<a href="#" class="active">我的账户</a>
+				<a href="#">幼富宝</a>
 				<a href="#">缴费明细</a>
 				<a href="#">帮助中心</a>
 			</div>
@@ -21,6 +21,9 @@
     </div>
     
     <div id="body">
+		<form id="form-payNotice" class="vote" method="post" action="${staticDomain}/family/payNotice.htm">
+			<input type="hidden" id="allplanids" name="allplanids" value="$!{PayNoticeVo.allplanids}">
+		</form>
         <div class="container familyPayNotice">
                 <div class="notice-title">
                     <h4>收费通知</h4>
@@ -28,32 +31,34 @@
                 <div class="all-top all-top-v2">
                     <label class="checkbox cb-allselect"><input type="checkbox"/>全选</label>
                     <div class="fr all-top-right">
-                        已选<strong class="num-color">3</strong>条通知，总计（元）：<strong class="sum-money">5700</strong>
-                        <a href="familyPayAffirm.html" class="btn btn-red" style="margin-right: 28px;">缴 费</a>
+                        已选<strong class="num-color">$plancount</strong>条通知，总计（元）：<strong class="sum-money">$totalplanmonthamt</strong>
+                        <a href="#" class="payreview btn btn-red" style="margin-right: 28px;">缴 费</a>
                     </div>
                 </div>
             <!--中远一号幼儿园-->
+				#foreach($planlist in $planlistlist)
                 <div class="notice-content">
                     <div class="item-title">
-                        <label class="checkbox"><input type="checkbox"/>中远一号幼儿园</label>
+                        <label class="checkbox"><input type="checkbox"/></label>
                     </div>
+					#foreach($plan in $planlist)
                     <div class="item">
                         <div class="fix-content">
                             <ul>
                                 <li class="width1">
-                                    <label class="checkbox"><input type="checkbox"/></label>
+                                    <label class="checkbox cb-one"><input type="checkbox" planid="$plan.planid"/></label>
                                 </li>
                                 <li class="width2">
                                     <p class="project">2015年09月学费<span class="tip">月代扣</span></p>
-                                    <p>缴费交易号：  <span>SV201505050100010001</span></p>
+                                    <p>缴费交易号：  <span>$plan.planid</span></p>
                                 </li>
                                 <li class="width3">
-                                    <p class="">张小宝 </p>
-                                    <p class="mgtop">海富幼儿园一分园</p>
+                                    <p class="">$plan.studentnm</p>
+                                    <p class="mgtop">$plan.orgnm</p>
                                 </li>
                                 <li class="width4">
-                                    <p>应收金额(元) ：  <span class="num-color f14">1900 </span>
-                                    <p class="mgtop">确认截止日：  <span>2015-08-25</span></p>
+                                    <p>应收金额(元) ：  <span class="num-color f14">$plan.payappamount</span>
+                                    <p class="mgtop">确认截止日：  <span>$!{plan.plandate}</span></p>
                                 </li>
                                 <li>
                                     <a href="#" class="btn btn-white">缴&nbsp;费</a>
@@ -65,6 +70,8 @@
                             </ul>
                         </div>
                     </div>
+					#end
+					<!--
                     <div class="item">
                         <div class="fix-content">
                             <ul>
@@ -88,10 +95,13 @@
                                 </li>
                             </ul>
                         </div>
-                    </div><!--end of item-->
-
+                    </div>
+					-->
+					<!--end of item-->
                 </div><!--end of notice-content-->
-            <!--中远一号幼儿园-->
+				#end
+			   <!--中远一号幼儿园-->
+			   <!--
                <div class="notice-content">
                 <div class="item-title">
                     <label class="checkbox"><input type="checkbox"/>中远一号幼儿园</label>
@@ -116,9 +126,9 @@
                             </li>
                             <li>
                                 <a href="#" class="btn btn-white">缴&nbsp;费</a>
-                                <!--<a href="#" class="btn btn-white">欠&nbsp;费</a>-->
-                                <!--<a href="#" class="btn btn-white">欠费补缴</a>-->
-                                <!--<a href="#" class="btn btn-white">等待扣款</a>-->
+                                <a href="#" class="btn btn-white">欠&nbsp;费</a>
+                                <a href="#" class="btn btn-white">欠费补缴</a>
+                                <a href="#" class="btn btn-white">等待扣款</a>
                                 <p class="f14 mgtop10"><label class="checkbox"><input type="checkbox"/>自动扣费</label></p>
                             </li>
                         </ul>
@@ -147,9 +157,11 @@
                             </li>
                         </ul>
                     </div>
-                </div><!--end of item-->
+                </div>
 
-            </div><!--end of notice-content-->
+            </div>
+			-->
+			<!--end of notice-content-->
         </div><!--end of container-->
         <br/>
     </div><!--end of body-->
@@ -160,7 +172,7 @@
             <label class="checkbox cb-allselect"><input type="checkbox"/>全选</label>
         </div>
         <div class="fr">
-            <p>已选<strong class="num-red">3</strong>条通知，总计（元）：<strong class="num-red">5700</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <p>已选<strong class="num-red">$plancount</strong>条通知，总计（元）：<strong class="num-red">$totalplanmonthamt</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="#" class="btn btn-red btnBigR">缴费</a>
             </p>
         </div>
@@ -191,6 +203,18 @@
 <script type="text/javascript" src="${staticDomain}/static/familypay/libs/My97DatePicker/WdatePicker.js"></script>
 <script type="text/javascript">
     $(function(){
+		$(".payreview").on("click",function(){
+			var allplanids = "";
+			$(".checkbox.cb-one :checked").each(function(){
+				allplanids = allplanids + $(this).attr("planid") + ",";
+			})
+			
+			$("#allplanids").val(allplanids);
+			
+			$("#form-payNotice").attr("action", "../family/payReview.htm");
+			$("#form-payNotice").submit();
+		});
+		
         $(".checkbox").checkbox();
 
         $(".control-group .p-eg span").on("click",function(){
