--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoFundStep3.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoFundStep3.vm
@@ -56,7 +56,7 @@
                                 </tr>
                             </table>
                         </div>
-                        <a class="btn" href="javascript:;">我的账户</a>
+                        <a class="btn" href="${staticDomain}/family/session.htm">我的账户</a>
                     </div>
                 </div>
             </div>
