--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/error/expire.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/error/expire.vm
@@ -44,7 +44,7 @@
                 <div class="panel">
                     <div class="form-done">
                         <div class="title">你的申请已提交，请勿重复操作！</div>
-                        <a class="btn" href="javascript:;">我的账户</a>
+                        <a class="btn" href="${staticDomain}/family/session.htm">我的账户</a>
                         <div class="tips">
                         	<p>温馨提示：</p>
 							<p>你可以查询资产明细，确认交易申请是否已发起，避免重复提交。</p>
