--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/createAccount1.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/createAccount1.vm
@@ -55,7 +55,7 @@
 										#end
 										>
                                         <span class="form-title">验证码</span>
-                                         <input class="ipt-verifycode input-code" type="text"  name="verifycode"  id="verifycode" value="$!{CustinfoVo.verifycode}" placeholder="输入图形验证码">
+                                         <input class="ipt-verifycode input-code" type="text"  name="verifycode"  id="verifycode" maxlength="4" value="$!{CustinfoVo.verifycode}" placeholder="输入图形验证码">
                                        <!-- <input class="input-yz" type="button" value="验证码">-->
                                        <span><img id="btn-verifycode" src="${staticDomain}/createImageservlet"+"?time="+(+new Date())" onclick="javascript:this.src=this.src+'?time='+(+new Date())" ></span>
                                         <span class="tips-check"><i class="icon"></i>$!{errMsg_verifycode_family}</span>
@@ -65,7 +65,7 @@
 										#end
 										>
                                         <span class="form-title">手机验证码</span>
-                                        <input class="ipt-phoneCode input-code" type="text" name="msgcode" id="msgcode" value="$!{CustinfoVo.msgcode}" placeholder="输入手机验证码">
+                                        <input class="ipt-phoneCode input-code" type="text" maxlength="6" name="msgcode" id="msgcode" value="$!{CustinfoVo.msgcode}" placeholder="输入手机验证码">
                                         <input id="btn-getMsgCode" class="input-button" type="button" value="获取验证码">
                                         <span class="tips-check"><i class="icon"></i>$!{errMsg_msgcode_family}</span>
                                     </li>
@@ -227,8 +227,18 @@
 		if(!check_code($("#verifycode"))){
 			return false;
 		}
-	      $(".common-form").attr("action","../family/createAccount2.htm");
-		  $(".common-form").submit();
+		//if(!check_phoneCode($("#msgcode"))){
+		//	return false;
+		//}
+		var errLen = $("ul li.error").length;
+		if(errLen>0){
+			$("ul li.error:eq(0) input[type=text]").focus();
+			$("ul li.error:eq(0) input[type=password]").focus();
+		}else{
+			$(".common-form").attr("action","../family/createAccount2.htm");
+		    $(".common-form").submit();
+		}
+	      
 	  })
     })(jQuery);
 </script>	            
