--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoFundStepP1.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoFundStepP1.vm
@@ -75,7 +75,7 @@ $(function(){
                             <span class="form-title">充值金额</span>
                             <input id="autoamt-display" disabled name="autoamt-display" style="background-color:#ddd" class="ipt-autoamt input-text" maxlength="11" type="text" value="$!{AutoTradeVo.autoamt}">元
 							<input id="autoamt" name="autoamt" class="ipt-autoamt input-text" maxlength="11" type="hidden" value="$!{AutoTradeVo.autoamt}">							
-                            <span class="tips-normal">请填写充值金额</span>
+                            <span class="tips-normal">#if(${AutoTradeVo.autoamt}) #else 请填写充值金额 #end </span>
                             <span id="appamtTips" class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
                         <li>
@@ -89,7 +89,7 @@ $(function(){
                             <span class="form-title">备注</span>
                             <input id="summary-display" disabled name="summary-display" style="background-color:#ddd" class="ipt-summary input-text" maxlength="50" type="text" value="$!{AutoTradeVo.summary}">
 							<input id="summary" name="summary" class="ipt-summary input-text" maxlength="50" type="hidden" value="$!{AutoTradeVo.summary}">
-                            <span class="tips-normal">如：收费理财、闲置资金</span>
+                            <span class="tips-normal">#if(${AutoTradeVo.summary}) #else 如：收费理财、闲置资金 #end</span>
                             <span id="appamtTips" class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
                         <li>
