--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/cash_result.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/cash_result.vm
@@ -15,7 +15,7 @@
 		<div class="topNav">
 			<div class="container">
 				<div class="b1"><a href="#" class="active">机构版</a><a href="#">家庭版</a></div>
-				<div class="b2"><span>柔软的大牛</span><a href="#"></a></div>
+				<div class="b2"><span>柔软的大牛</span><a href="${staticDomain}/family/settingAccount.htm"></a></div>
 			</div>
 		</div>
         <div class="container">
@@ -46,7 +46,7 @@
                         <div class="title">成功提交取现申请</div>
                         <p>申请时间：${today}</p>
                         <p>预计资金到帐：${nextWorkDay}</p>
-                        <a class="btn" href="javascript:;">我的账户</a>
+                        <a class="btn" href="${staticDomain}/family/session.htm">我的账户</a>
                         <div class="tips">
                         </div>
                     </div>
