--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/settingAccount.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/settingAccount.vm
@@ -9,7 +9,7 @@
 		<div class="topNav">
 			<div class="container">
 				<div class="b1"><a href="#" class="active">机构版</a><a href="#">家庭版</a></div>
-				<div class="b2"><span>柔软的大牛</span><a href="#"></a></div>
+				<div class="b2"><span>柔软的大牛</span><a href="${staticDomain}/family/settingAccount.htm"></a></div>
 			</div>
 		</div>
         <div class="container">
